Add alias value to list_{,terse_}output config
Report module aliases of loaded modules on list sub-command when "alias"
value is part of list_output/list_terse_output configuration option.

--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -95,9 +95,9 @@ array set g_config_defs [list\
    implicit_requirement {MODULES_IMPLICIT_REQUIREMENT @implicitrequirement@ 0\
       b {0 1}}\
    list_output {MODULES_LIST_OUTPUT {@listoutput@} 0 l {header idx variant\
-      indesym sym tag key} {} {} eltlist}\
+      alias indesym sym tag key} {} {} eltlist}\
    list_terse_output {MODULES_LIST_TERSE_OUTPUT {@listterseoutput@} 0 l\
-      {header idx variant indesym sym tag key} {} {} eltlist}\
+      {header idx variant alias indesym sym tag key} {} {} eltlist}\
    locked_configs {{} {@lockedconfigs@} 0 o}\
    mcookie_check {MODULES_MCOOKIE_CHECK always 0 s {eval always}}\
    mcookie_version_check {MODULES_MCOOKIE_VERSION_CHECK\
