--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -1385,7 +1385,7 @@ proc reportModules {search_queries header hsgrkey hstyle show_mtime show_idx\
                if {!$alias_colored} {
                   lappend sym_list @
                   # track use of '@' sym to add it to the output key
-                  if {![info exists ::g_used_alias_nocolor]} {
+                  if {$report_sym && ![info exists ::g_used_alias_nocolor]} {
                      set ::g_used_alias_nocolor 1
                   }
                }
