Add sticky_purge configuration option
Add sticky_purge configuration option that controls if an error, a
warning or nothing should be produced when trying to unload a sticky (or
super-sticky) module during a purge sub-command.

Set to "error" by default. When configuration is modified it sets the
MODULES_STICKY_PURGE environment variable.

Fixes #502

--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -118,6 +118,7 @@ array set g_config_defs [list\
    silent_shell_debug {MODULES_SILENT_SHELL_DEBUG @silentshdbgsupport@ 0 b {0\
       1}}\
    siteconfig {{} {@etcdir@/siteconfig.tcl} 0 s}\
+   sticky_purge {MODULES_STICKY_PURGE error 0 s {error warning silent}}\
    tag_abbrev {MODULES_TAG_ABBREV {@tagabbrev@} 0 l {} {} initConfTagAbbrev}\
    tag_color_name {MODULES_TAG_COLOR_NAME {@tagcolorname@} 0 l {} {}\
       initConfTagColorName}\
