--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -185,7 +185,7 @@ x-resource     {x-resource     x-resource     reportCmd      nop            nop 
 # Also fail unload if mod is super-sticky even if forced, unless reloading
 proc skipUnloadIfSticky {mode modname modfile} {
    if {$mode ne {unload}} {
-      return
+      return 0
    }
 
    # when loaded, tags applies to mod name and version (not with variant)
@@ -195,6 +195,8 @@ proc skipUnloadIfSticky {mode modname modfile} {
    set is_sticky_not_reloading [expr {[isModuleTagged $modname sticky 1\
       $modfile] && [currentState reloading_sticky] ne $modname &&\
       [currentState unloading_sticky] ne $modname}]
+   set sticky_purge [expr {[getState commandname] eq {purge} ? [getConf\
+      sticky_purge] : {}}]
 
    if {!$is_supersticky_not_reloading && $is_sticky_not_reloading &&\
       [getState force]} {
@@ -208,10 +210,19 @@ proc skipUnloadIfSticky {mode modname modfile} {
       lpopState modulenamevr
       lpopState modulefile
 
-      set tagname [expr {$is_supersticky_not_reloading ? {super-sticky} :\
-         {sticky}}]
-      knerror [getStickyUnloadMsg $tagname]
+      set msg [getStickyUnloadMsg [expr {$is_supersticky_not_reloading ?\
+         {super-sticky} : {sticky}}]]
+      # no message if sticky_purge is set to silent
+      switch -- $sticky_purge {
+         error - {} {knerror $msg}
+         warning {reportWarning $msg}
+      }
+
+      # skip unload without raised error
+      return 1
    }
+
+   return 0
 }
 
 proc execute-modulefile {modfile modname modnamevrvar modspec {up_namevr 1}\
@@ -254,7 +265,10 @@ proc execute-modulefile {modfile modname modnamevrvar modspec {up_namevr 1}\
    }
 
    # fail unload when sticky
-   skipUnloadIfSticky $mode $modname $modfile
+   if {[skipUnloadIfSticky $mode $modname $modfile]} {
+      # skip end of unload upper level process when no error raised
+      return -code continue 0
+   }
 
    if {![info exists ::g_modfileUntrackVars]} {
       # list variable that should not be tracked for saving
