install: add --with-sticky-purge configure option
Introduce the --with-sticky-purge configure option to choose at
installation time the default error behavior when unloading a sticky
module during a purge command. Allowed values are error (default),
warning and silent.

--- a/Makefile.inc.in
+++ b/Makefile.inc.in
@@ -121,6 +121,9 @@ nearlyforbiddendays := @nearlyforbiddendays@
 tagabbrev := @tagabbrev@
 tagcolorname := @tagcolorname@
 
+# error behavior when purging sticky module
+stickypurge := @stickypurge@
+
 # check version on magic cookie
 mcookieversioncheck := @mcookieversioncheck@
 
