--- a/site.exp.in
+++ b/site.exp.in
@@ -85,6 +85,8 @@ set install_nearlyforbiddendays "@nearlyforbiddendays@"
 set install_tagabbrev "@tagabbrev@"
 set install_tagcolorname "@tagcolorname@"
 
+set install_stickypurge "@stickypurge@"
+
 set install_mcookieversioncheck "@mcookieversioncheck@"
 
 set install_availoutput "@availoutput@"
