Introduce modulepath-label modulefile command
Add modulepath-label modulefile command to define specific label for
designated modulepath. This command can be used in rc files. If a
specific label is set for a modulepath, this string is used instead of
modulepath fully qualified path designation as report list header.

Allow command from modulefile execution context to enable use from
global rc files.

--- a/tcl/mfinterp.tcl.in
+++ b/tcl/mfinterp.tcl.in
@@ -89,13 +89,13 @@ proc initModfileModeAliases {mode auto aliasesVN aliasesPassArgVN\
    if {![info exists g_modfilePerModeAliases]} {
       set ::g_modfileBaseAliases [list versioncmp versioncmp getenv getenv\
          getvariant getvariant is-loaded is-loaded is-saved is-saved is-used\
-         is-used is-avail is-avail uname uname module-info module-info exit\
-         exitModfileCmd reportCmdTrace reportCmdTrace reportInternalBug\
-         reportInternalBug reportWarning reportWarning reportError\
-         reportError raiseErrorCount raiseErrorCount report report\
-         isVerbosityLevel isVerbosityLevel isWin initStateIsWin puts\
-         putsModfileCmd readModuleContent readModuleContent\
-         formatErrStackTrace formatErrStackTrace]
+         is-used is-avail is-avail uname uname module-info module-info\
+         modulepath-label modulepath-label exit exitModfileCmd reportCmdTrace\
+         reportCmdTrace reportInternalBug reportInternalBug reportWarning\
+         reportWarning reportError reportError raiseErrorCount\
+         raiseErrorCount report report isVerbosityLevel isVerbosityLevel\
+         isWin initStateIsWin puts putsModfileCmd readModuleContent\
+         readModuleContent formatErrStackTrace formatErrStackTrace]
 
       # list of alias commands whose target procedure is adapted according to
       # the evaluation mode
@@ -519,10 +519,10 @@ proc execute-modulerc {modfile modname modspec} {
          versioncmp is-loaded is-loaded is-used is-used module-version\
          module-version module-alias module-alias module-virtual\
          module-virtual module-forbid module-forbid module-hide module-hide\
-         module-tag module-tag module-info module-info\
-         reportInternalBug reportInternalBug setModulesVersion\
-         setModulesVersion readModuleContent readModuleContent\
-         formatErrStackTrace formatErrStackTrace]
+         module-tag module-tag module-info module-info modulepath-label\
+         modulepath-label reportInternalBug reportInternalBug\
+         setModulesVersion setModulesVersion readModuleContent\
+         readModuleContent formatErrStackTrace formatErrStackTrace]
 
       # add site-specific command aliases for modulerc interp
       if {[info exists ::modulerc_extra_cmds]} {
@@ -2889,6 +2889,12 @@ proc pushenv-wh {var val} {
       set ::env($var) {}
    }
    return {}
+}
+
+proc modulepath-label {modpath label} {
+   set modpath [getAbsolutePath $modpath]
+   set ::g_modulepathLabel($modpath) $label
+   reportDebug "modpath=$modpath, label='$label'"
 }
 
 # ;;; Local Variables: ***
