--- a/tcl/modfind.tcl.in
+++ b/tcl/modfind.tcl.in
@@ -523,6 +523,15 @@ proc getModulePathList {{behavior returnempty} {resolv_var 1} {set_abs 1}} {
    return $modpath_list
 }
 
+proc getModulepathLabel {modpath} {
+   if {[info exists ::g_modulepathLabel($modpath)]} {
+      set label $::g_modulepathLabel($modpath)
+   } else {
+      set label $modpath
+   }
+   return $label
+}
+
 # return list of the configured and existing global RC files
 proc getGlobalRcFileList {} {
    set rclist {}
