--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1949,8 +1949,9 @@ proc cmdModuleAvail {show_oneperline show_mtime show_filter search_filter\
             # err is raised from a modulerc)
             array set mod_list [getModules $dir $mod $show_mtime\
                $search_filter $show_filter]
-            reportModules $search_queries $dir mp $hstyle $show_mtime 0\
-               $one_per_line $theader_cols hidden-loaded
+            set modpath_label [getModulepathLabel $dir]
+            reportModules $search_queries $modpath_label mp $hstyle\
+               $show_mtime 0 $one_per_line $theader_cols hidden-loaded
          } else {
             # add result if not already added from an upper priority modpath
             foreach {elt props} [getModules $dir $mod $show_mtime\
