ts: test modulepath-label command in 50/570

--- a/testsuite/modulefiles.4/.modulerc
+++ b/testsuite/modulefiles.4/.modulerc
@@ -9,3 +9,42 @@ if {[info exists env(TESTSUITE_EXTRA)]} {
         }
     }
 }
+if {[info exists env(TESTSUITE_MODULEPATH_LABEL)]} {
+    switch -- $env(TESTSUITE_MODULEPATH_LABEL) {
+        rel1 {
+            modulepath-label . {My label}
+        }
+        rel2 {
+            modulepath-label ../modulefiles.4 {My label}
+        }
+        rel3 {
+            modulepath-label ../../testsuite/modulefiles.4 {My label}
+        }
+        fqpath1 {
+            modulepath-label $env(TESTSUITEDIR)/modulefiles.4 {My label}
+        }
+        otherpath1 {
+            modulepath-label $env(TESTSUITEDIR)/modulefiles.3 {Other label}
+        }
+        err1 {
+            modulepath-label . My label
+        }
+        empty1 {
+            modulepath-label {} {My label}
+        }
+        long1 {
+            modulepath-label . {very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very very long label}
+        }
+        dup1 {
+            modulepath-label . {My label}
+            modulepath-label . {Other label}
+        }
+        dup2 {
+            modulepath-label $env(TESTSUITEDIR)/modulefiles.4 {My label}
+            modulepath-label . {Other label}
+        }
+        dup3 - dup4 - dup5 {
+            modulepath-label $env(TESTSUITEDIR)/modulefiles.4 {Modulepath rc label}
+        }
+    }
+}
