Allow MODULERCFILE to contain a list of rc file
MODULERCFILE may define a list of rc file separated by colon character.
Load them in the definition order.

Allow shorthand config definition with module config rcfile {+,-}file.

--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -107,7 +107,7 @@ array set g_config_defs [list\
       0 i {0 365} {} {} intbe}\
    pager {MODULES_PAGER {@pagercmd@} 0 s}\
    protected_envvars {MODULES_PROTECTED_ENVVARS <undef> 0 l}\
-   rcfile {MODULERCFILE <undef> 0 s}\
+   rcfile {MODULERCFILE <undef> 0 l}\
    redirect_output {MODULES_REDIRECT_OUTPUT 1 0 b {0 1}}\
    reset_target_state {MODULES_RESET_TARGET_STATE __init__ 0 s}\
    quarantine_support {MODULES_QUARANTINE_SUPPORT @quarantinesupport@ 0 b {0\
