install: add --enable-unique-name-loaded configure option
Introduce the --enable-unique-name-loaded configure option to choose at
installation time to enable the unique_name_loaded configuration option
which allows only one module loaded per module name.

Configure option is disabled by default.

--- a/Makefile.inc.in
+++ b/Makefile.inc.in
@@ -99,6 +99,9 @@ extendeddefault := @extendeddefault@
 # advanced version specification
 advversspec := @advversspec@
 
+# raise error if root name is already loaded
+uniquenameloaded := @uniquenameloaded@
+
 # module name search matching style
 searchmatch := @searchmatch@
 
