--- a/site.exp.in
+++ b/site.exp.in
@@ -70,6 +70,8 @@ set install_extendeddefault "@extendeddefault@"
 
 set install_advversspec "@advversspec@"
 
+set install_uniquenameloaded "@uniquenameloaded@"
+
 set install_searchmatch "@searchmatch@"
 
 set install_wa277 "@wa277@"
