--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -127,7 +127,8 @@ array set g_config_defs [list\
    tcl_linter {MODULES_TCL_LINTER {@tcllintercmd@} 0 s}\
    term_background {MODULES_TERM_BACKGROUND @termbg@ 0 s {dark light}}\
    term_width {MODULES_TERM_WIDTH 0 0 i {0 1000} {} {} intbe}\
-   unique_name_loaded {MODULES_UNIQUE_NAME_LOADED 0 0 b {0 1}}\
+   unique_name_loaded {MODULES_UNIQUE_NAME_LOADED @uniquenameloaded@ 0 b {0\
+      1}}\
    unload_match_order {MODULES_UNLOAD_MATCH_ORDER @unloadmatchorder@ 0 s\
       {returnlast returnfirst}}\
    implicit_default {MODULES_IMPLICIT_DEFAULT @implicitdefault@ 1 b {0 1}}\
