Add error_on_multi_load configuration option
Introduce error_on_multi_load configuration option to define behavior of
module load command from top context in case of multiple modules and top
context evaluation.

When set to "continue" (default), load continues even if one modulefile
in the list fails to load. When set to "abort", if one modulefile fails
to load, environment changes of the modulefiles in the list already
evaluated are withdrawn and evaluation stops (modulefiles remaining in
the list are not evaluated).

Configuration option sets MODULES_ERROR_ON_MULTI_LOAD environment
variable when changed from default value.

flushEnvSettings procedure is added to withdrawn environment changes
performed by already loaded modulefiles.

--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1410,6 +1410,15 @@ proc cmdModuleLoad {context uasked tryload loadany tag_list args} {
       if {$errCode == 0} {
          set loadok 1
       }
+
+      # abort evaluation if error and behavior configured this way (abort
+      # means stop to evaluate modulefile and flush changes of previous ones)
+      # applies to top evaluation context for load and try-load sub-command
+      if {$ret && $context eq {load} && !$loadany && [getConf\
+         error_on_multi_load] eq {abort}} {
+         flushEnvSettings
+         break
+      }
    }
    lpopState mode
 
