install: add --with-error-on-multi-load configure option
Introduce the --with-error-on-multi-load option to choose at
installation time the default error behavior when loading multiple
modulefiles. Default behavior is "continue".

--- a/Makefile.inc.in
+++ b/Makefile.inc.in
@@ -124,8 +124,9 @@ nearlyforbiddendays := @nearlyforbiddendays@
 tagabbrev := @tagabbrev@
 tagcolorname := @tagcolorname@
 
-# error behavior when purging sticky module
+# error behaviors
 stickypurge := @stickypurge@
+erroronmultiload := @erroronmultiload@
 
 # check version on magic cookie
 mcookieversioncheck := @mcookieversioncheck@
