--- a/site.exp.in
+++ b/site.exp.in
@@ -89,6 +89,8 @@ set install_tagcolorname "@tagcolorname@"
 
 set install_stickypurge "@stickypurge@"
 
+set install_erroronmultiload "@erroronmultiload@"
+
 set install_mcookieversioncheck "@mcookieversioncheck@"
 
 set install_availoutput "@availoutput@"
