--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -85,8 +85,8 @@ array set g_config_defs [list\
       initConfColor}\
    colors {MODULES_COLORS {} 0 l {} {} initConfColors}\
    csh_limit {{} 4000 0 i}\
-   error_on_multi_load {MODULES_ERROR_ON_MULTI_LOAD continue 0 s {abort\
-      continue}}\
+   error_on_multi_load {MODULES_ERROR_ON_MULTI_LOAD {@erroronmultiload@} 0 s\
+      {abort continue}}\
    extra_siteconfig {MODULES_SITECONFIG <undef> 1 s {}}\
    editor {MODULES_EDITOR {@editor@} 0 s {} {} initConfEditor}\
    home {MODULESHOME {@moduleshome@} 0 s}\
