--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -1021,11 +1021,20 @@ proc cmdModuleIntLoad {topcall command mode tag_list args} {
                if {$retlo != 0 && ![getState force]} {
                   set ret $retlo
                }
+               # record requirement prior raising error
+               prereqAllModfileCmd 1 0 --optional --tag [join $tag_list :]\
+                  $arg
+               # report error message and raise error
+               if {$retlo != 0} {
+                  reportMissingPrereqError [currentState modulenamevr] $arg
+               }
             }
+         } else {
+            # record requirement as optional: no error if not loaded but
+            # reload will be triggered if loaded later on
+            prereqAllModfileCmd 1 0 --optional --tag [join $tag_list :]\
+               {*}$args
          }
-         # record requirement as optional: no error if not loaded but reload
-         # will be triggered if loaded later on
-         prereqAllModfileCmd 1 0 --optional --tag [join $tag_list :] {*}$args
       } elseif {$command eq {load-any}} {
          # load and register requirement in a OR-operation
          prereqAnyModfileCmd 1 $subauto --tag [join $tag_list :] {*}$args
