ts: test forbidden requirement against error_on_multi_load in 50/59*

--- a/testsuite/modulefiles.4/err/.modulerc
+++ b/testsuite/modulefiles.4/err/.modulerc
@@ -1,7 +1,8 @@
 #%Module
 if {[info exists env(TESTSUITE_ERROR_ON_MULTI_LOAD)]} {
     switch -- $env(TESTSUITE_ERROR_ON_MULTI_LOAD) {
-        forbidden - depre_load_forbidden {
+        forbidden - depre_load_forbidden - load_last_forbidden - load_first_forbidden -\
+        load-any_first_forbidden - try-load_last_forbidden - try-load_first_forbidden {
             module-forbid err/1.0
         }
     }
