ts: test hard hidden error against error_on_multi_load in 50/59*

--- a/testsuite/modulefiles.4/err/.modulerc
+++ b/testsuite/modulefiles.4/err/.modulerc
@@ -5,5 +5,9 @@ if {[info exists env(TESTSUITE_ERROR_ON_MULTI_LOAD)]} {
         load-any_first_forbidden - try-load_last_forbidden - try-load_first_forbidden {
             module-forbid err/1.0
         }
+        hard_hidden - depre_load_hard_hidden - load_last_hard_hidden - load_first_hard_hidden -\
+        load-any_first_hard_hidden - try-load_last_hard_hidden - try-load_first_hard_hidden {
+            module-hide --hard err/1.0
+        }
     }
 }
