contrib: modernize example modulefiles
Modernize, harmonize and simplify example modulefiles:

* Follow coding convention defined for the project
* Use simple "#%Module" file signature, no "1.0" suffix needed
* Same help message format for all modulefiles
* Improve Tcl code of "module-info" modulefile
* Fix "module-info" help message which is reported twice in help mode
* Report additional information in "module-info" like new commands or
  uname command.

--- a/contrib/modulefiles/modules.in
+++ b/contrib/modulefiles/modules.in
@@ -1,26 +1,21 @@
-#%Module1.0#####################################################################
-##
-## modules modulefile
-##
-proc ModulesHelp { } {
-        global version prefix
+#%Module
 
-        puts stderr "\tmodules - loads the modules software & application environment"
-        puts stderr "\n\tThis adds $prefix/* to several of the"
-        puts stderr "\tenvironment variables."
-        puts stderr "\n\tVersion $version\n"
+proc ModulesHelp {} {
+    puts stderr {    modules - loads the modules software & application environment}
+    puts stderr "    This adds $::prefix/* to several of the environment variables."
+    puts stderr "    Version $::version"
+    puts stderr {}
 }
 
-module-whatis	"loads the modules environment"
+module-whatis {loads the modules environment}
 
 # for Tcl script use only
-set	version		@VERSION@
-set	prefix		{@prefix@}
+set version @VERSION@
+set prefix {@prefix@}
 
-
-setenv          MODULESHOME	$prefix
-prepend-path    PATH   		{@bindir@}
-prepend-path    MANPATH		{@mandir@}
+setenv MODULESHOME $prefix
+prepend-path PATH {@bindir@}
+prepend-path MANPATH {@mandir@}
 
 # enable module versioning modulepath
 @VERSIONING@module use {@baseprefix@/versions}
