Add Nagelfar directive to help lint .tcl.in files

--- a/tcl/init.tcl.in
+++ b/tcl/init.tcl.in
@@ -627,6 +627,7 @@ proc initConfTclExtLib {envvar value validvallist intvallist} {
    set libfile libtclenvmodules@SHLIB_SUFFIX@
 
    # determine lib directory
+   ##nagelfar ignore #19 Strange command
    ##nagelfar ignore +13 Too long line
    @notmultilibsupport@set libdir {@libdir@}
    @multilibsupport@switch -- [getState machine] {
@@ -646,6 +647,7 @@ proc initConfTclExtLib {envvar value validvallist intvallist} {
    @multilibsupport@} else {
    @multilibsupport@   set libdir $libdirmain
    @multilibsupport@}
+   ##nagelfar variable libdir
 
    return [file join $libdir $libfile]
 }
