--- a/tcl/main.tcl.in
+++ b/tcl/main.tcl.in
@@ -636,6 +636,7 @@ if {[catch {
    setState cmdline "$argv0 $argv"
 
    # Load extension library if enabled
+   ##nagelfar ignore #6 Strange command
    ##nagelfar ignore +2 Too long line
    @libtclenvmodules@if {[file readable [getConf tcl_ext_lib]]} {
    @libtclenvmodules@   reportDebug "Load Tcl extension library ([getConf tcl_ext_lib])"
