--- a/tcl/subcmd.tcl.in
+++ b/tcl/subcmd.tcl.in
@@ -2108,6 +2108,7 @@ proc cmdModuleAutoinit {} {
    setenv MODULES_CMD [getAbsolutePath $::argv0]
 
    # define current Modules version if versioning enabled
+   ##nagelfar ignore #4 Strange command
    @VERSIONING@if {![info exists ::env(MODULE_VERSION)]} {
    @VERSIONING@   setenv MODULE_VERSION @MODULES_RELEASE@@MODULES_BUILD@
    @VERSIONING@   setenv MODULE_VERSION_STACK @MODULES_RELEASE@@MODULES_BUILD@
@@ -2187,6 +2188,7 @@ proc cmdModuleAutoinit {} {
    if {[getState shelltype] in {sh csh fish}} {
       # add Modules bin directory to PATH if enabled but do not increase ref
       # counter variable if already there
+      ##nagelfar ignore #26 Strange command
       @setbinpath@if {{@bindir@} ni [split [get-env PATH] :]} {
          @setbinpath@@appendbinpath@-path --ignore-refcount PATH {@bindir@}
       @setbinpath@}
@@ -2887,6 +2889,7 @@ proc cmdModuleLint {args} {
    set linter_mrc [getConf tcl_linter]
    set linter_gmrc [getConf tcl_linter]
    # add module-specific syntax database in addition to regular Tcl one
+   ##nagelfar ignore #11 Strange command
    @nagelfaraddons@if {$linter eq {nagelfar}} {
    @nagelfaraddons@   lappend linter_mfile -s _\
    @nagelfaraddons@      -s {@nagelfardatadir@/syntaxdb_modulefile.tcl}\
