Adapt argument list of no-op reportDebug procedure
Adapt argument list of no-op reportDebug procedure to help Nagelfar
linter to correctly build syntax database.

--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -49,7 +49,7 @@ proc __reportDebug {message {showcaller 1} {caller _undef_}} {
 }
 
 # alternative procedure used when debug is disabled
-proc __reportDebugNop {args} {}
+proc __reportDebugNop {message {showcaller 1} {caller _undef_}} {}
 
 proc reportWarning {message {recordtop 0}} {
    reportError $message $recordtop WARNING wa 0
